Made the app go full screen on default and removed the toolbar. Fixed the positioning of the menu and title so that there's no overflow.

--- a/client/public/style/menu.css
+++ b/client/public/style/menu.css
@@ -13,8 +13,8 @@ body {
 }
 
 h1 {
-    margin-top: 2vw;
-    margin-bottom: 37vw;
+    margin-top: 8vh;
+    margin-bottom: 57vh;
     font-size: 3.2em;
     color: darkred;
 }
